# Visual_Speech_Recognition_for_Multiple_Languages

./: autoavsr.ipynb  autoavsr.py  main.py  pyproject.toml
