[project]
name = "autoavsr"
version = "0.1.0"
description = "Audio-Visual Speech Recognition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "opencv-python",
    "scipy",
    "scikit-image",
    "av",
    "six",
    "mediapipe",
    "ffmpeg-python",
]

[tool.setuptools.packages.find]
where = ["autoavsr"]
include = ["autoavsr*"]