[project]
name = "autoavsr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"torch",
	"torchvision",
	"torchaudio",
	"opencv-python",
	"scipy",
	"scikit-image",
	"av",
	"six",
	"mediapipe",
	"ffmpeg-python",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pipelines*", "espnet*"]

[tool.setuptools.package-data]
"pipelines" = ["**/*.txt", "**/*.npy", "**/*.json"]
"espnet" = ["**/*.txt", "**/*.npy", "**/*.json"]